栈上分配与逃逸分析